Implement API for Cabs entity

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "CabDbConnection": "Data Source=MAN;Initial Catalog=CabDB;Integrated Security=True"
+  }
 }
