Implement auth for Cab System

--- a/CabAutomationSystem/appsettings.json
+++ b/CabAutomationSystem/appsettings.json
@@ -1,15 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CabAutomationSystem-834B671D-47C7-4757-9F53-FF2F460AC129;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "CabDbConnection": "Data Source=MAN;Initial Catalog=CabDB;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-
-
-  "ConnectionStrings": {
-    "CabDbConnection": "Data Source=MAN;Initial Catalog=CabDB;Integrated Security=True"
-  }
-
-
+  "AllowedHosts": "*"
 }
