--- a/CabAutomationSystem/Properties/launchSettings.json
+++ b/CabAutomationSystem/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:23838",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:57744",
+      "sslPort": 44310
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "CabAutomationSystem": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
