--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
@@ -14,6 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CabAutomationSystem.Contracts\CabAutomationSystem.Contracts.csproj" />
+    <ProjectReference Include="..\CabAutomationSystem.Repositories\CabAutomationSystem.Repositories.csproj" />
     <ProjectReference Include="..\CabAutomationSystem\CabAutomationSystem.csproj" />
   </ItemGroup>
 
